#77: Get rid of illegal reflective access warning in ec2 admin (#84)